# SFML-Quick-Start

./: README.md
SFMLQuickStart/: CMakeLists.txt  main.cpp
SFMLQuickStart/includes/Actors/: Enemy.h  IActor.h  Player.h
SFMLQuickStart/includes/Managers/: DisplayManager.h  Game.h  IManager.h  InputManager.h  UIManager.h
SFMLQuickStart/includes/Utils/: Sprite.h  Text.h
SFMLQuickStart/src/Actors/: Enemy.cpp  Player.cpp
SFMLQuickStart/src/Managers/: DisplayManager.cpp  Game.cpp  InputManager.cpp  UIManager.cpp
SFMLQuickStart/src/Utils/: Sprite.cpp  Text.cpp
